--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -44,6 +44,10 @@ body {
     z-index: 2;             
     border-radius: 15px;
     box-shadow: 20px 10px 30px -2px gray;
+    cursor: pointer;
+}
+.player-cover:hover {
+    transform: scale(1.05);
 }
 
 .album-info {
@@ -67,21 +71,21 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-left: 55px;
 }
 .player-control-item {
     cursor: pointer;
     display: inline-flex;
-    margin-left: 15px;
+    margin-left: 10px;
     margin-right: 15px;
     font-size: 50px !important;
     align-items: center;
     justify-content: center;
     position: relative;
     border-radius: 50%;
-    /* box-shadow: 2px 2px 10px -5px gray; */
+    opacity: 0.8;
 }
 .player-control-item:hover {
+    opacity: 0.6;
     cursor: pointer;
     border-radius: 50%;
     box-shadow: 0px 5px 10px 0px gray;
